--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
     "react-spinners": "^0.15.0",
-    "react-toastify": "^11.0.3"
+    "react-toastify": "^11.0.3",
+    "react-tooltip": "^5.28.0",
+    "sweetalert2": "^11.15.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
