--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
     "react-tooltip": "^5.28.0",
-    "sweetalert2": "^11.15.10"
+    "sweetalert2": "^11.15.10",
+    "swiper": "^11.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
