--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-tabs": "^6.1.0",
     "react-toastify": "^11.0.3",
     "react-tooltip": "^5.28.0",
+    "recharts": "^2.15.1",
     "sweetalert2": "^11.15.10",
     "swiper": "^11.2.1"
   },
