--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.5.0",
     "axios": "^1.7.9",
+    "dom-to-image": "^2.6.0",
     "firebase": "^11.2.0",
+    "html2canvas": "^1.3.2",
+    "jspdf": "^2.5.2",
     "lottie-react": "^2.4.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
